syntax = 'proto3';

package catalog.v1alpha0;

option go_package = "github.com/materials-resources/s_prophet/internal/core/model/catalog_v1alpha0";

message Cursor {
  int64 select = 1;
  int64 size = 2;
}

message Product {
  string id = 1;
  string sn = 2;
  string name = 3;
  string description = 4;
  string product_group_name = 6;
  //  double list_price = 5;
}

message ProductSupplier {
  string product_id = 1;
  string supplier_id = 2;
  string supplier_sn = 3;
  bool is_primary = 4;
}
message ProductGroup {
  string sn = 1;
  string name = 2;
}

message ProductFilter {
  string product_group_id = 1;
}

service CatalogService {
  rpc ListProduct(ListProductRequest) returns (ListProductResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);

  rpc CreateProductSupplier(CreateProductSupplierRequest) returns (CreateProductSupplierResponse);
  rpc UpdateProductSupplier(UpdateProductSupplierRequest) returns (UpdateProductSupplierResponse);

  rpc ListGroup(ListGroupRequest) returns (ListGroupResponse);
  rpc GetGroup(GetGroupRequest) returns (GetGroupResponse);
  rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse);
  rpc UpdateGroup(UpdateGroupRequest) returns (UpdateGroupResponse);

  rpc GetProductBySupplier(GetProductBySupplierRequest) returns (GetProductBySupplierResponse);
}

message ListProductRequest {
  int32 cursor = 1;
}
message ListProductResponse {
  repeated Product products = 1;
  int32 next_cursor = 2;
}

message GetProductRequest {
  string id = 1;
}
message GetProductResponse {
  //Unique ID of product
  string id = 1;
  //Serialized ID
  string sn = 2; //products item ID usually formatted as MRS-XXX00-123456
  //Name of product
  string name = 3;
  //Description of product
  string description = 4;
  //Product group
  string product_group_id = 5;
  //MSRP price of product
  double msrp_price = 6;
  double available_quantity = 7;
  string available_unit = 8;
}

message CreateProductRequest {
  string id = 1;
  string description = 2;
  string extended_description = 3;
  float list_price = 4;
  string product_group_id = 8;
  string upc = 9;
  string supplier_id = 10;
  string supplier_part_no = 11;
  float cost = 12;
}

message CreateProductResponse {}

message DeleteProductRequest {
  string id = 1;
}
message DeleteProductResponse {}

message ListGroupRequest {}
message ListGroupResponse {
  repeated ProductGroup product_groups = 1;
}

message CreateProductSupplierRequest {}

message CreateProductSupplierResponse {}

message UpdateProductSupplierRequest {}
message UpdateProductSupplierResponse {}

message GetGroupRequest {
  string id = 1;
}
message GetGroupResponse {
  ProductGroup product_group = 1;
  repeated Product products = 2;
}

message CreateGroupRequest {
  ProductGroup product_group = 1;
  //  string sn = 1; //Unique identifier of Product Group
  //  string name = 2; // Description of group
}
message CreateGroupResponse {}

message UpdateGroupRequest {
  ProductGroup product_group = 1;
}
message UpdateGroupResponse {}

message GetProductBySupplierRequest {
  string supplier_id = 1;
  string supplier_part_no = 2;
}

message GetProductBySupplierResponse {
  string sn = 1;
}
